implement event-driven architecture